[package]
name = "fingerprint-wasm"
version = "0.1.6"
authors = ["ttttang <fangshiyu2@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
crc  = "1.8.1"
[dependencies.web-sys]
version = "0.3.68"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlDocument',
  'HtmlCanvasElement',
  'Window',
  "Performance",
]


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
